--- a/Book_Backend/vercel.json
+++ b/Book_Backend/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/**/*.js",
+      "src": "api/*/.js",
       "use": "@vercel/node"
     }
   ],
@@ -17,7 +17,7 @@
     }
   ],
   "env": {
-    "MONGO_URI": "your-mongodb-atlas-uri",
+    "MONGO_URI": "mongodb+srv://adinakhalid99_db_user:4xm8yYPZeIDk5W9T@cluster0.k9ltlup.mongodb.net/proj_Backend?retryWrites=true&w=majority",
     "JWT_SECRET": "super_secret_jwt_key_12345",
     "NODE_ENV": "production"
   }
