--- a/Book_Backend/vercel.json
+++ b/Book_Backend/vercel.json
@@ -2,23 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/*/.js",
+      "src": "server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "server.js"
     }
-  ],
-  "env": {
-    "MONGO_URI": "mongodb+srv://adinakhalid99_db_user:4xm8yYPZeIDk5W9T@cluster0.k9ltlup.mongodb.net/proj_Backend?retryWrites=true&w=majority",
-    "JWT_SECRET": "super_secret_jwt_key_12345",
-    "NODE_ENV": "production"
-  }
+  ]
 }
